--- a/style.scss
+++ b/style.scss
@@ -1,6 +1,167 @@
+//dark theme
+$Very-Dark-Blue-BG: hsl(230, 17%, 14%);
+$Very-Dark-Blue-Top-BG-Pattern: hsl(227, 23%, 16%);
+$Dark-Desaturated-Blue-Card-BG: hsl(228, 28%, 20%);
+$Desaturated-Blue-Text: hsl(228, 34%, 66%);
+$White-Text: hsl(0, 0%, 100%);
+
+
+// light theme
+$White-BG: hsl(0, 0%, 100%);
+$Very-Pale-Blue-Top-BG-Pattern: hsl(225, 100%, 98%);
+$Light-Grayish-Blue-Card-BG: hsl(227, 47%, 96%);
+$Dark-Grayish-Blue-Text: hsl(228, 12%, 44%);
+$Very-Dark-Blue-Text: hsl(230, 17%, 14%);
+
 body {
-    background-color: aqua;
+
+    font-family: 'Inter', sans-serif;
 }
+
+//.container {
+//    padding: 40px;
+//}
+
+.wrapper {
+    max-width: 850px;
+    margin-left: auto;
+    margin-right: auto;
+    margin-top: 100px;
+}
+
+@mixin flexItemsCenter($direction) {
+    display: flex;
+    flex-direction: $direction;
+    justify-content: space-between;
+    align-items: center;
+}
+
+.header {
+    @include flexItemsCenter(row);
+    background-color: $Very-Dark-Blue-Top-BG-Pattern;
+    padding: 100px;
+    padding-top: 20px;
+}
+
+.content {
+    background-color: $Very-Dark-Blue-BG;
+}
+
+.toggle-wrapper {
+    @include flexItemsCenter(row);
+}
+
+.toggle-wrapper__title {
+    color: #ffffff;
+    text-transform: capitalize;
+}
+
+.side--title {
+    text-transform: capitalize;
+    font-size: 20px;
+    color: #ffffff;
+}
+
+.side--subtitle {
+    text-transform: capitalize;
+    font-size: 12px;
+    font-weight: 700;
+    color: #777777;
+}
+
+
+.label {
+    background: linear-gradient(to right, #4192D3 10%, #3CCC8C);
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    height: 26px;
+    width: 50px;
+    border-radius: 50px;
+    padding: 5px;
+    box-sizing: border-box;
+    position: relative;
+    //transform: scale(1);
+    cursor: pointer;
+}
+
+.ball {
+    width: 22px;
+    height: 22px;
+    border-radius: 50%;
+    background-color: #fff;
+    position: absolute;
+    top: 2px;
+    left: 2px;
+    transition: transform 0.2s linear;
+}
+
+.checkbox {
+    opacity: 0;
+    position: absolute;
+}
+
+.checkbox:checked + .label .ball {
+    transform: translateX(24px);
+}
+
+body.dark {
+    background-color: #454545;
+}
+
+
+.card-wrapper {
+    @include flexItemsCenter(row);
+    flex-wrap: wrap;
+    padding-left: 50px;
+    padding-right: 50px;
+    transform: translate(0, -60px);
+}
+
+.card {
+    background-color: $Dark-Desaturated-Blue-Card-BG;
+    text-align: center;
+    padding: 30px;
+    border-radius: 5px;
+}
+
+.card--link {
+    @include flexItemsCenter(row);
+    justify-content: unset;
+    text-decoration: none;
+    color: #777777;
+}
+
+.card--title {
+    font-weight: 700;
+    color: white;
+    margin-top: 10px;
+    margin-bottom: 10px;
+    font-size: 40px;
+}
+
+.card--subtitle {
+    color: #777777;
+    text-transform: uppercase;
+    letter-spacing: 2px;
+    font-size: 12px;
+    font-weight: 100;
+}
+
+.card--link__name {
+    margin-left: 10px;
+}
+
+.card--time {
+    color: #1EB589;
+    display: inline-block;
+    margin-top: 20px;
+}
+
+.card:last-child .card--time {
+    color: #DC414C;
+}
+
 
 .attribution {
     font-size: 11px;
